# aemo-energy-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/adr/: 0001-aemo-data-access.md
ingestion/: config.py
