[project]
name = "au-energy-pipeline"
version = "0.1.0"
description = "End-to-end ELT pipeline for AEMO NEM dispatch price and generation data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ibrahim Mohammad" }]

dependencies = [
    "requests>=2.31",
    "tenacity>=8.2",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "deltalake>=0.17",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dbt = [
    "dbt-core>=1.8",
    "dbt-duckdb>=1.8",
    "dbt-databricks>=1.8",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "black>=24.4",
    "ruff>=0.5",
    "isort>=5.13",
    "pre-commit>=3.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ingestion*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
